<resources>
    <string name="app_name">植物病害通</string>
    <string name="app_version">1.0.1</string>
    <string name="text_hint">請輸入文字</string>
    <string name="name_hint">請輸入姓名</string>
    <string name="email_hint">請輸入電子郵件</string>
    <string name="phone_hint">請輸入行動電話號碼</string>
    <string name="address_hint">請輸入地址</string>
    <string name="password_hint">請輸入至少六位數以上密碼</string>
    <string name="period_hint">請輸入所種植物為第幾期作物</string>
    <string name="variety_hint">請輸入品種</string>
    <string name="name">姓名:</string>
    <string name="phone">行動電話號碼:</string>
    <string name="email">電子郵件:</string>
    <string name="address">地址:</string>
    <string name="icon">封面圖片</string>
    <string name="title_name">植物病害通</string>
    <string name="register">註冊</string>
    <string name="register_title">註冊帳號</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="save">儲存</string>
    <string name="back_to_login">返回登入</string>
    <string name="login_title">登入帳號</string>
    <string name="user_title">個人檔案</string>
    <string name="photo_warning">此為系統辨識之結果僅供參考，\n若對結果仍存疑請用「聯絡專家」功能確認</string>

    //稻熱病
    <string name="rice_blast"><![CDATA[稻熱病會感染水稻的各個生育期，侵害各個部位。<b><font color="#632A7E" >秧苗期稻熱病主要發生於葉片及葉鞘</font></b>，此時稻組織較嫩易感病。稻熱病菌感染後，
         <b><font color="#632A7E" >初期呈墨綠色或灰綠色，隨後轉為急速型之白色病斑</font></b>，病斑迅速擴展，引起葉片甚至全株秧苗枯死。
         <b><font color="#632A7E" >本田期水稻葉稻熱病之病斑順著葉脈擴展，圓形至紡錘形、兩端較尖，初期墨綠色或灰綠色，急速型病斑為白色，病斑上有大量病原菌孢子，後期病斑邊緣呈褐色或深褐色，中間灰白色，病斑邊緣黃暈不明顯</font></b>。稻熱病較少危害本田稻熱病本田期水稻葉鞘，但會感染葉舌及葉節稱之為葉舌稻熱病。稻熱病菌感染葉舌後再擴展至葉節引起臨近葉片及葉鞘組織褐變乾枯萎凋死亡。節稻熱病發生於抽穗後之水稻，莖節褐變或黑變嚴重時稻莖枯死易折斷。葉鞘外側無明顯病徵，葉鞘內側表面則常有褐變現象，莖節上有大量病菌孢子。穗稻熱病包括穗頸、枝梗及穀粒稻熱病，穗頸及枝梗被害時，初呈灰綠色水浸狀病斑，病斑邊緣轉為深褐色，被害部位以上的枝梗及穀粒枯死。穀粒被害，呈暗褐色圓形或橢圓形病斑。]]></string>
    //紋枯病
    <string name="sheath_blight"><![CDATA[水稻從秧苗期至成熟期整個生育期間均會被紋枯病菌感染，各生育期之病徵大同小異。目前農友大多採用機械插秧，箱育秧苗時間短，秧苗期發生紋枯病的機會少。
         <b><font color="#632A7E" >本田期水稻栽培過程中，從分中期至成熟期為紋枯病之主要發生期</font></b>。秧苗初罹患紋枯病時於葉鞘與葉片上均出現灰污綠色水浸狀病斑，後期病斑中央灰白色邊緣褐色。本田水稻分中期紋枯病開始發生，紋枯病菌常從稻叢內部稻株之下位葉鞘開始感染，再向外部稻株及向上蔓延。
         <b><font color="#632A7E" >葉鞘上病徵先形成約1公分大小的灰綠色水浸狀圓形或橢圓形病斑，後逐漸擴大為長約2~3公分，寬1公分之病斑，病斑邊緣褐色中間轉成灰白色，高濕高溫環境下數個病斑癒合成虎斑狀</font></b>。晴朗的氣候下，葉鞘組織枯死，並導致水份輸送不良，造成葉片黃化乾枯，稻叢外圍稻株之葉鞘雖然沒有紋枯病斑，但內部稻株之下位葉會有枯黃現象，撥開稻株常可看見稻叢內部有紋枯病發生。陰雨或重露的高濕環境下，葉鞘上病斑會蔓延擴展到葉片上。分盛期以後，稻叢之葉片相互交織，
         <b><font color="#632A7E" >當葉片接觸到鄰近葉片或葉鞘之病斑亦會被傳染致病。葉部受害時初呈濕潤狀灰綠色，病斑迅速擴大形成雲紋狀或不正形的枯褐色大病斑</font></b>。感染紋枯病之葉片組織枯死初期不易造成捲曲，與白葉枯病引起葉片捲曲，有所不同。
         <b><font color="#632A7E" >水稻孕穗後期遇到高溫高濕之環境，農友如未採取防治紋枯病措施，發病稻叢之稻穗在抽出時就會被感染</font></b>，稻穗被害部位呈污綠色，枝梗及穀粒腐朽呈灰褐色枯死。乳熟期以後之稻穗被害則局部初呈污綠色，後轉為灰褐色病斑。稻紋枯病在環境適宜，溫度24~28℃之高濕環境下，發病後約3~4天，病斑上或附近稻表面組織上的菌絲會開始形成菌核，菌核初呈白色菌絲團，經過約2天時間轉為褐色，菌核接觸寄主組織之一面常向內凹，而成不正之扁球形，紋枯病與其他菌核性病害之主要區別，為病株外表會形成菌核]]></string>
    //胡麻葉枯病
    <string name="brown_spot"><![CDATA[稻種萌芽時受害會引起苗枯病，稻芽初呈黃褐色水浸狀病變，子葉上呈短黑色線狀斑點，嚴重時繼而枯萎死亡，病苗上有墨綠色菌絲及分生孢子，病苗之子葉褐色至深褐色，並向本葉之葉鞘蔓延，葉鞘受害後亦呈褐色病變，組織脆而易折斷，葉片生長受阻不易伸長，致葉片直立黃化，嚴重則與葉鞘一起枯萎死亡。老秧苗葉片病斑與本田期葉片病斑相似，
         <b><font color="#632A7E" >初呈墨綠色水浸狀小斑點，隨後轉為褐色小斑點，再漸次擴大成為紡錘形或橢圓形</font></b>，一般病斑如胡麻種子之大小，整個病斑呈褐色至深褐色，周圍明顯有黃暈，有些病斑上具有同心輪紋。
         <b><font color="#632A7E" >稻植株缺氮、鉀或矽而顯現感病性時，病斑會繼續擴大，大型病斑沿葉脈呈長橢圓形，兩端較圓寬，黃暈明顯但較窄，常易被誤認為稻熱病斑，但稻熱病之病斑兩端較尖黃暈不明顯</font></b>
         ，兩者間有頗大差異。稻孕穗期嚴重發生胡麻葉枯病，植株呈現矮化，葉片常無法正常伸展，葉片縐縮，葉片組織略變厚，抽穗緩慢，稻穗短小結實不佳。本病甚少危害稻葉鞘，但會危害葉節及葉舌，即葉片與葉鞘交接處及其葉舌，初呈墨綠水浸狀小斑，而後轉為褐色，並擴大病斑，如發生在孕穗期劍葉之葉舌，嚴重時會造成抽穗不良。本病會感染稻穗，致病力比稻熱病弱。穗頸或枝梗被害後，形成墨綠色轉黑褐色病斑，被害部位以上之稻穗不會立即枯死。穀粒亦常被感染，初呈褐色至黑褐色小斑點，病斑擴大後成為胡麻種子大小之茶褐、暗褐色病斑，嚴重時病斑會擴展至大部份外穎，環境適宜並有孢子柄及分生孢子產生。稻穗被害後，空秕粒增加，其糙米病變為銹米、死米或青米等，對稻米品質影響甚鉅。 ]]></string>
    //褐條葉枯病
    <string name="narrow_brown_spot"><![CDATA[本病通常在水稻葉片上產生條狀褐色病斑，亦會感染葉鞘、葉舌、穗梗及稻穎等部位。病斑一般被局限於2~4條葉脈中間縱向擴展，
         <b><font color="#632A7E" >形成細長條形病斑、寬度小於1公釐、長度2~10公釐，赤褐色，病斑外圍有黃暈，病斑會合併</font></b>。部分稻品種之病斑較短黑褐色略有黃暈。 ]]></string>
    //白葉枯病
    <string name="bacterial_leaf_blight"><![CDATA[其病徵有三種型態，<b><font color="#632A7E" >典型葉枯病徵、急性萎凋型病徵和淡黃化型病徵</font></b>。病害在田間通常發生於分盛期之後，有時則在苗期就可發現病徵，主要在葉片或葉鞘，偶爾可在穀粒上出現。
         <b><font color="#632A7E" >(一)幼苗期病徵</font></b>：最初水浸狀小斑點在下位葉葉緣出現，高溫時斑點上出現菌泥，斑點後來延長，而漸變成黃色，病葉最後枯萎而很難和自然老化枯葉分辨，在熱帶地區幼苗可能經由葉片或根部之傷口或水孔侵入而成系統性感染。病菌在幼苗內繁殖迅速，而很快侵入維管束而造成幼苗之死亡。
         <b><font color="#632A7E" >(二)本田期之病徵</font></b>：本田最初出現病徵在插秧後3~4 星期，而以分盛期後出現較多，常在葉緣離葉尖5-6公分處出現水浸狀小斑，然後逐漸延長而變成黃或枯黃色，而在健全或病斑之間有一狹小水浸狀帶，這些病斑通常沿一邊或兩邊葉緣，並向中肋擴大，最後可能到達葉鞘，黃色病斑最後變成白或灰白色，而在高溫狀態下易被腐生真菌所佔據，並出現很多大小不一黑斑，並有菌泥由病斑上溢出，菌泥乾燥呈黃色小球型，直徑約1.22公釐，很容易由病斑上脫落。在最適當發病條件下，看不到上述病徵，水浸狀和暗綠色病斑出現不久，罹病葉片即向內捲，病斑很快向下延伸，
         <b><font color="#632A7E" >而上端葉片被害部份萎凋並成灰白色</font></b>，有黏狀菌泥溢出，稱為急性型病徵，
         <b><font color="#632A7E" >常在高氮肥地區及感病秈稻上出現</font></b>。葉鞘上病徵主要由葉片往下延伸，
         <b><font color="#632A7E" >最初呈黃綠或灰綠色條斑，再轉變成黃白色</font></b>，在嚴重感染株整個葉鞘都褪色，枯萎，病株之根系發育不良，植株矮小，稔實率很低。
         <b><font color="#632A7E" >(三)急性萎凋型病徵</font></b>：最初記錄在印尼有此病徵型之發生，
         <b><font color="#632A7E" >受感染之幼苗外葉捲起，萎凋並成灰綠到淡褐或灰褐色</font></b>，植株很明顯矮小，並呈冠腐，用手壓擠可感覺到充滿黏性黃色細菌，病株有的整株由地際處斷開，而飄浮在水面，此型病徵偶而出現在成株上，大都在孕穗或開花期，數條大白色斑紋出現在劍葉，往下延伸至葉鞘，幼穗萎凋成白色，最後整株水稻枯死。急性萎凋型病徵在臺灣於1974年推廣嘉農秈8號和嘉農秈11號兩品種後在南部地區第二期大發生，停止栽培這兩品種後，田間再也沒有出現此型病徵。]]></string>
    //科普
    <string name="popular_science_1"><![CDATA[影響米飯品質因素以生產階段的
    「<b><font color="#632A7E">品種</font></b>」影響最大，通常稻穀收穫時的米質大致已決定該批稻米的品質，所以品種若經選定，生產的稻米品質大致已決定了一半，另外則由其它因素決定，而其中產地、氣候、期作等因素為先天無法變動的，唯有栽培與病蟲害管理的方法可用人為措施加以控制。良好的栽培管理方法不但獲致較佳的產量，更可以使推薦優質水稻品種的良質米潛力表現出來。良質米的一般栽培管理技術如下：<br><br>
    <b><font color="#632A7E" >優良水田土壤之培育</font></b><br><br>
    1. 前作種植綠肥或增施有機質肥料。<br>
    2. 將穀殼或收穫後稻稈切碎掩埋土中。<br>
    3. 逐步深耕以增加耕土體積，並提高有機質肥料效益。<br>
    4. 利用客土方法，改善土壤成為壤土或砂壤土，促進根系發育。<br>
    5. 應使用矽酸質肥料來調整酸性土壤的酸鹼值。<br>
    6. 注意土壤之保水力及通氣性。<br><br>
    <b><font color="#632A7E" > 育成強健秧苗</font></b><br><br>
    1. 選用採種田之合格稻種。<br>
    2. 確實做好浸種、消毒與催芽等種子預措工作。<br>
    3. 力行疏播，每個育苗箱播種量為經催芽後種子200～220公克。<br>
    4. 綠化場內做好適當管理，以防止秧苗徒長與避免生理傷害。<br>
    5. 播種後第一期作18～20天、第二期作10～12天，即苗齡2.5～3.0葉<br><br>
    <b><font color=""#632A7E" >做好整地工作</font></b><br><br>
     前期作收穫後應即行粗耕翻犁曬田，以促進土壤風化、有機物之分解及有毒物質之釋放。在水源充足的地方，可於插秧前5～7天灌水，3天前施基肥，隨即進行第二次耕耘並用蓋筒蓋平。在缺水地區或易漏水的砂壤土，粗耕、施基肥及細耕可於插秧前2～3天連續進行。整地時田面宜力求平坦、均勻，並於田間尚有餘水(約0.5～1.0公分深)，泥漿完全沉澱而土表稍硬時插秧。<br><br>
    <b><font color="#632A7E" >做好插秧工作</font></b><br><br>
      <b><font color="#632A7E" >1. 掌握插秧適期</font></b>：插秧適期是指在此時期插秧能避開低溫冷害，或將來水稻抽穗或成熟時避開梅雨、寒流或東北季風等之影響，而獲得較高產量及優良品質之種植時期。<br>
      <b><font color="#632A7E" >2. 適當栽培密度</font></b>：目前插秧機的插植密度採寬行密植方式，每叢株數以3～5株為宜，通常每公頃秧苗以220至250箱為宜。<br>
      <b><font color="#632A7E" >3. 力行淺植</font></b>：以增加下部節位之分蘗數，提高稻穀產量。<br>
      <b><font color="#632A7E" >4. 南北走向</font></b>：稻株行向為南北走向時，稻株易接受日照及增加通風性，以減少病蟲害及倒伏發生。<br>
      <b><font color="#632A7E" >5. 秧苗健康檢查</font></b>：檢查育苗是否良好，由於育苗與插秧技術精良，插秧後極少缺株，如缺株不嚴重時，可由四週植株分蘗旺盛加以彌補，不會造成產量降低，因此建議可以不必補植。<br>
      <b><font color="#632A7E" >6. 褔壽螺防治</font></b>：褔壽螺較多地區，應於插秧後參考「植物保護手冊」所推薦的防治藥劑加以防治。<br><br>
    <b><font color="#632A7E" >雜草防除</font></b><br><br>臺灣的田間雜草生育旺盛，影響稻穀品質及產量甚鉅，農民常使用除草劑防除，使用較多如丁基拉草、殺丹及其混合藥劑等，約佔水田除草劑施用量之90%以上。多年生雜草(如：野茨菰、瓜皮草、牛毛氈等)可採用本達隆、免速隆及百速隆等對多年生雜草防治效果較佳藥劑，請依「植物保護手冊」所推薦藥劑與方法審慎使用。<br><br>
    <b><font color="#632A7E" >強化各生育期之灌排水管理</font></b><br><br>
    <b><font color="#632A7E" >1. 成活期至分蘗始期</font></b>：本時期約為第一期作插秧後10天，第二期作插秧後7天內。為提高除草劑的藥效並促進水稻成活，田面以維持3公分左右水深即可。<br>
    <b><font color="#632A7E" >2. 分蘗始期至分蘗終期</font></b>：本時期水分管理應經常保持3～5公分的淺水狀態，以促進根群之發育與早期分蘗。有效分蘗終期第一期作約在插秧後38天左右，第二期作約在插秧後28天左右。施用第1次及第2次追肥時，需控制田間約1公分之淺水時施用追肥，俟田間水分完全滲入土壤內後，恢復灌水。<br>
    <b><font color="#632A7E" >3. 有效分蘗終期至幼穗形成始期</font></b>：俗稱的「曬田期」，讓田土乾燥而略呈龜裂狀態，供給氧氣，也因田土乾燥促進稻根向下生長，有幫助稻株後期養分吸收及不倒伏之效。另外也可抑制無效分蘗，促進稻米產量及品質提升。原則上第一期作於插秧後40至50天，第二期作於插秧後30至37天左右，將田面曝曬至表土以腳踏入不留腳印程度，或有1～2公分寬、5～10公分深的龜裂，曬田程度以稻株葉片不可捲曲（如發現葉片捲曲，即表示植物體內缺水，應立即灌溉），其後灌溉管理採輪灌或間歇灌溉1～2次，灌水3至5公分深即可。<br>
    <b><font color="#632A7E" >4. 幼穗形成始期至幼穗形成終期</font></b>：此時期在水稻抽穗前22日開始，對養分與水分需求量高，應採行5～10公分之深水灌溉。若施穗肥6　臺中區農業技術專刊193期6　臺中區農業技術專刊193期水稻栽培管理技術手冊水稻栽培管理技術手冊時，應在幼穗長度0.2公分施用，並先將田間排水至1.5公分水深才施肥，其後在第2天行深水灌溉至幼穗形成終期為止，為期約10天。<br>
    <b><font color="#632A7E" >5. 孕穗期</font></b>：水稻抽穗前7至10天之孕穗期，土壤中氧氣消耗量達到最高峰，故此時期的水雖必要但不可湛水，可採輪灌方式，每3～5日輪灌一次，使土壤通氣良好，促進根系之強健。<br>
    <b><font color="#632A7E" >6. 抽穗開花期</font></b>：抽穗開始至齊穗為止的水稻葉面積為全生育期中最大，而在葉部光合作用所貯積的碳水化合物需有充足的水分才可以轉移到稻穀，所以此時期須維持5～10公分的水深。<br>
    <b><font color="#632A7E" >7. 乳熟期至糊熟期</font></b>：此一時期又稱為灌漿期，由於水稻齊穗後植株最上部三片葉子為主要進行光合作用生產碳水化合物的工廠，需仰賴充足的水分輸送轉存至穀粒，故仍應採用5至10公分的深水灌溉至抽穗後第18天止。<br>
    <b><font color="#632A7E" >8. 黃熟期至完熟期</font></b>：水稻抽穗後約18天開始進入黃熟期，此時上部葉仍繼續進行光合作用合成碳水化合物，所以仍不宜太早斷水，應採用3至5天約3公分水深之輪灌2至3次，直至收穫前5至7天排水，以防穀粒充實不飽滿。生產良質米，收穫前不可太早斷水，避免心腹白米及胴裂米之產生。<br><br>
    <b><font color="#632A7E" >病蟲害防治</font></b><br><br> 病蟲害的發生可隨栽培制度、氣候、品種或栽培地區環境不同而有所差異。病蟲害發生後，使具有光合作用能力之葉面積減少或使葉鞘或稻稈乾枯引起倒伏，導致稔實率及千粒重減低、白米透明度降低、心腹白增加及完整米粒降低，影響白米外觀與碾米品質。水稻重要主要病蟲害防治請參考「植物保護手冊」之規定合法用藥，適時、適位、適量加以防治。<br><br>
    <b><font color="#632A7E" >收穫</font></b><br><br>收穫期之適當與否會嚴重影響水稻之米質，如太早收穫，則青米粒數及白米心腹白增加，千粒重減低。太晚收穫則稻穀內水分太乾，造成胴裂，也較易導致完整米率之降低。一般稻穀適當收穫時期為稻田內大多數稻穗上穀粒均已成金黃色，僅在基部上尚有2～3粒穀粒呈黃綠色時收穫，惟為提高良質米品質，以提早1～2天收穫為宜。<br><br>
    <b><font color="#632A7E" >乾燥</font></b><br><br>臺灣高溫多雨，稻穀收穫後必須立即進行乾燥，以避免產生霉變。乾燥可分為日曬乾燥法及乾燥機烘乾法。稻穀以循環式乾燥機採三段變溫烘乾較為理想，即剛收穫稻穀置於循環式烘乾箱中，先以定溫55℃進行烘乾，待稻穀含水率降至20%時，再以定溫50℃續行烘乾，待稻穀含水率降至16%時，再以定溫47℃進行烘乾，至稻穀含水率14～15%時為止，如此可確保食味品質及提高碾米之完整米率。]]></string>


    <string name="popular_science_2"><![CDATA[水稻需肥量深受品種、生理特性、氣候、土壤性質、土壤肥力、栽培管理及病蟲害發生情形等因素影響。因此，水稻合理施肥推薦用量，在於
    <b><font color="#632A7E" >避免過度的施用肥料致水稻無法全部吸收</font></b>，而污染生態環境及水源。肥料施用於水稻田中，三要素肥料之氮肥的有效性約30～40%，磷肥約5～20%，鉀肥約20～40%，顯示大部分肥料施用後造成揮發、淋失及固定沖蝕等損失，降低肥料效果。適量的施用肥料為增加稻作單位面積產量最佳方法之一，肥料效果深受水稻品種、當地氣候、病蟲害及土壤肥力與特性等因素影響。由於，過去農民對水稻施肥，依經驗法則以單質肥料或複合肥料計量，用量常常超過水稻生育期間三要素養分需求量，造成稻株生長旺盛、病蟲密度增高、稻株倒伏而影響稻穀成熟及增加無效分蘗數致抽穗不齊、穀粒不充實、米質差。為使肥料充分發揮增產及提升品質，應依水稻生育期情形及土壤肥力狀況，選擇合適肥料種類，適時、適量靈活調節施肥。另，配合水分管理，避免深水狀態施肥，而使肥料滲漏流失，應以淺水狀態施肥，增加肥料有效性，總之，
    <b><font color="#632A7E" >合理化施肥與合理灌排水管理互相配合，才能達到水稻增產的目標。</font></b><br><br>

    <b><font color="#632A7E" > 如何提高土壤中養分有效性</font></b><br><br>強酸性土壤中之磷易被固定呈無效磷化合物，而降低磷的有效性；硝酸態氮型肥料則不適用於浸水農田，因施用後不易被土壤吸附，及在厭氣環境下會發生脫氮作用致肥效降低。矽素為水稻必需要素，可使水稻莖葉強硬，抗倒伏和病蟲危害。水稻根部生長正常，可提高對磷之吸收率及緩和氮肥過多之害。酸性稻田土壤由於有效性矽酸含量較低，水稻對矽素需求量相對較高，故酸性稻田施用矽酸質肥料(每公頃1～3噸)可使稻穀產量增產5～15%。<br><br>
    <b><font color="#632A7E" >土壤有機質的地力維持</font></b><br><br>為增加土壤有機質含量，必須施用有機質肥料或掩施農作物殘體，以提高土壤生產潛力。土壤有機質的功效甚多，如改善土壤團粒構造，促進透氣及排水，且有機物質經土壤微生物分解礦化後，可釋出養分提供作物營養所需。土壤有機物質可增加土壤緩衝能力，緩和土壤酸鹼度反應。土壤有機質尚可吸附及交換營養要素，提高土壤肥力，提供土壤微生物活動及增加族群密度，減少土壤中有毒物質。農田施用有機質肥料等以增加土壤有機質含量，亦可於第二期作水稻收穫後(裡作休閒期間)種植苕子、埃及三葉草、油菜等綠肥作物，於盛花期(營養養分最豐富時期)掩施入土壤中以發酵釋出肥分，可提供下一期水稻生育之養分，且有助於增加土壤有機質含量。<br>
    <b><font color="#632A7E" >稻作施肥管理</font></b><br><br>水稻所需的養分大部分來自土壤，土壤中養分供給應依土壤肥力及水稻生育期適時、適量調整。土壤中有機質含量或土壤氮素供給之效果，深受環境及氣候因子影響，目前僅能根據一般推薦量及氣候因素，利用肉眼觀察水稻葉色及葉姿靈活調整氮肥用量。磷鉀肥則可利用土壤分析瞭解農田土壤磷、鉀含量多寡，來決定磷鉀肥的需要量；依分析數值區分為極低、低、中、高等四級，做為推薦磷鉀肥用量之依據。<br>
    <b><font color="#632A7E" >氮肥 </font></b><br><br>水稻對氮肥反應最敏感，施肥不當，則影響水稻產量至鉅。水稻生育初期氮肥過多，常致使莖葉茂盛、葉色濃綠、無效分蘗數增多；孕穗期氮肥過多，則莖葉軟弱易倒伏、抽穗不齊、米質差。<br>水稻生育各期均可吸收氮素，以分蘗盛期及幼穗形成期，對氮肥需求最大，分蘗盛期氮素充足與否，直接影響穗數；幼穗形成期則影響一穗粒數、稔實率、千粒重。因此，欲求水稻高產，必須在分蘗盛期及幼穗形成期供給足夠氮肥。<br>穗肥必須在幼穗長達0.2公分之日起2天內施用，若提前施氮肥則增加每穗粒數，降低稻穀稔實率，如遇到稻莖節間伸長時期，則會使下部節間過長而軟弱倒伏，稻穀產量降低，米質差。延後施肥時，因一穗粒數已決定，無法增加粒數，穗肥效果降低。稻株葉色濃綠、葉片下垂、植株軟弱、病蟲害發生時、陰雨日照不足等環境均不宜施用穗肥；因此，幼穗形成期前徹底晒田，才能使水稻葉色轉黃，葉片直立方能夠施用足夠氮肥，以達到增產效果。<br>水稻幼穗形成期前實施曬田，必須曬到表土發生龜裂為止，此舉可使土壤中多餘銨態氮氧化為硝酸態氮，由於晒田期間水稻不再吸收多量氮素，開始貯藏澱粉，使葉片逐漸直立，葉色逐漸變淡轉黃綠色，有利於水稻後期根部的健全發育。<br><br>
    <b><font color="#632A7E" >磷肥 </font></b><br><br>農田經年大量施用過磷酸鈣或含磷複合肥料後，僅水溶性磷進入土壤溶液供水稻吸收，另部分被固定成為難溶解的磷化合物，使有效性磷轉為無效性磷，不易被水稻吸收利用。<br>水稻缺乏磷時，則分蘗數減少，植株生育受阻，根系發育不良，根數少，成熟期延遲，穗短且青米粒多，白米粒小，食味劣。<br><br>
    <b><font color="#632A7E" >鉀肥 </font></b><br><br>  撒施氯化鉀肥料於稻田表土層，鉀肥經溶解進入土壤溶液中，大部分鉀離子被土壤膠體直接吸附；施用過量鉀肥時，則造成鈣、鎂等陽離子減少吸收。

]]></string>



</resources>